Added a link to the site, hosted on the University of Brightons server, in the README file.

--- a/README
+++ b/README
@@ -4,3 +4,9 @@ This is a simple site that I created for a university assignment.
 It was created using the languages HTML, CSS and some JavaScript in 'notepad++'
 
 Please note some of the information on the pages, specifically the 'About' page, is no longer up to date and should not be seen as factual data.
+
+
+Link to the site:
+(hosted on the University of Brighton's server)
+
+itsuite.it.brighton.ac.uk/jf288/mysite/
